--- a/conference/BPFSummit2022/bpf-on-the-edge.org
+++ b/conference/BPFSummit2022/bpf-on-the-edge.org
@@ -49,49 +49,69 @@ We *develop BPF*:
 
 We are a /*platinum member of the BPF foundation*/.
 
-* A note on feature detection
+* Slide:
 
-Please don't rely on the kernel version number for detecting BPF features!
+#+HTML: <div class="center-text" style="margin-top: 3em;">
+#+HTML: <div class="big" style="margin-bottom: 2em;">
 
-Use feature probing! See =bpftool feature= output
+Please /*don't*/ rely on the *kernel version* number for detecting BPF features!
+
+#+HTML: </div>
+
+Use /feature probing/ instead! See =bpftool feature= output
+#+HTML: </div>
 
 
 * What is the edge?
 :PROPERTIES:
 :reveal_extra_attr: class="img-slide"
 :END:
+#+HTML: <div style="font-size: 70%;">
 
 #+CAPTION: From http://www.computerscijournal.org/vol12no2/an-edge-computing-tutorial/ - CC-BY-4.0
 [[file:edge-figure.jpg]]
+#+HTML: </div>
 
-* Requirements of the edge
-
-- Small footprint (memory, power, CPU)
-- Lots of devices
-
-* What can BPF bring to the edge
+* What can BPF bring to the edge?
 :PROPERTIES:
 :reveal_extra_attr: class="img-slide"
 :END:
 
+#+ATTR_html: :class figure-bg
 [[file:bpf-venn.png]]
 
-* BPF for edge networking
-- lower overhead container networking
-  - Latency is paramount
-- XDP acceleration: network features on every node
-  - Firewalling
-  - Load balancing
-  - Forwarding
+* BPF for the edge
+- /Networking/
+  - Lower overhead container networking
+  - XDP acceleration: network features on every node
+    - Firewalling, load balancing, forwarding
 
-* BPF for edge monitoring
-- Low-overhead performance monitoring
-- Application resource usage reporting
+- *Monitoring*
+  - Low-overhead performance monitoring
+  - Application resource usage reporting
 
-* BPF for edge security
-- Firewalling and DDOS protection
-- Application isolation
-- Custom security monitoring and enforcement
+- /*Security*/
+  - Firewalling and DDOS protection
+  - Application isolation
+  - Custom security monitoring and enforcement
+
+* BPF co-existence
+With more users, /co-existence/ becomes important!
+
+- Assume other programs will access your hooks!
+  - Not *every hook* supports this
+  - In particular, use [[https://github.com/xdp-project/xdp-tools/][libxdp]] for XDP hook (/*mandatory*/ on RHEL)
+
+- /More work needed/, also on security models
+
+See [[https://lpc.events/event/16/contributions/1353/][Daniel Borkmann's talk at LPC]] for an example of how this can break!
+
+* Summary
+:PROPERTIES:
+:reveal_extra_attr: class="mid-slide"
+:END:
+
+Edge networking brings many challenges. BPF can be part of the solution!
 
 * Emacs end-tricks                                                 :noexport:
 
